class.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: covid
  labels:
    app: test
spec:
  replicas: 1 
  selector:
     matchLabels:
       app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: covid
        image: amansingh12/covid-webpage:latest

---
apiVersion: v1
kind: Service
metadata:
  name: covid-service
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
