coffee.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: coffee-web
  labels:
    app: test
spec:
  replicas: 1 
  selector:
     matchLabels:
       app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: coffee-web
        image: amansingh12/coffee_web:latest

---
apiVersion: v1
kind: Service
metadata:
  name: coffee-service
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
