deploy_service.yaml
apiVersion: v1
kind: Deployment
metadata: 
  name: hack-web
  labels:
    app: test
spec:
  replicas: 3
  selector:
     matchLabels:
       app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: hack-web
        image: 926156776701.dkr.ecr.ap-south-1.amazonaws.com/private:latest

---
apiVersion: v1
kind: Service
metadata:
  name: hack-service
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
