ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "jaatbreak.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopping-service
            port:
              number: 80
  - host: "jaatbreak.com"
    http:
      paths:
      - pathType: Prefix
        path: "/coffee"
        backend:
          service:
            name: coffee-service
            port:
              number: 80
  - host: "jaatbreak.com"
    http:
      paths:
      - pathType: Prefix
        path: "/hack"
        backend:
          service:
            name: hack-service
            port:
              number: 80
